# fig-standing-desk

./: .gitignore  license.md  readme.md
cad/: concept-table.blend
client/: .gitignore  main.js  package.json
client/src/: main.js
pyserver/: __init__.py
server/: Cargo.toml  readme.md
server/src/: gpio.rs  http.rs  lib.rs  main.rs
server/src/http/: gpio.rs  mod.rs
server/src/http/gpio/: cylus.rs  mod.rs
