[package]
name = "fig-table-server"
version = "0.1.0"
authors = ["Alain Galvan <hi@alain.xyz>"]

[dependencies]
nickel = "0.9.0"
sysfs_gpio = "0.5.0"
sysfs-pwm = "^0.1.0"
rustc-serialize = "0.3.22"

[target.arm-unknown-linux-gnueabihf]
ar = "arm-linux-gnueabihf-gcc-ar"
linker = "arm-linux-gnueabihf-gcc"